Fix padding for Navbar Toggler to align with Dropdown.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,11 @@ footer {
 .navbar-toggler {
   border: none;
   padding-top: 20px;
+  padding-right: 25px;
+}
+
+.navbar-toggler-icon {
+    color: #fafafa;
 }
 
 .primary-link {
